--- a/build.gradle
+++ b/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'com.google.apis:google-api-services-drive:v2-rev306-1.23.0'
     // https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-client
-    compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.27'
+    compile 'org.glassfish.jersey.core:jersey-client:2.27'
+    compile 'org.glassfish.jersey.inject:jersey-hk2:2.27'
 }
