--- a/build.gradle
+++ b/build.gradle
@@ -34,4 +34,9 @@ dependencies {
     // https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-client
     compile 'org.glassfish.jersey.core:jersey-client:2.27'
     compile 'org.glassfish.jersey.inject:jersey-hk2:2.27'
+    compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.27'
+    // https://mvnrepository.com/artifact/javax.activation/activation
+    compile 'javax.activation:activation:1.1'
+    // https://stackoverflow.com/questions/43574426/how-to-resolve-java-lang-noclassdeffounderror-javax-xml-bind-jaxbexception-in-j
+    compile 'javax.xml.bind:jaxb-api:2.3.0'
 }
